--- a/style.scss
+++ b/style.scss
@@ -233,7 +233,7 @@ img {
   margin: 0;
   color: #ededed;
   cursor: pointer;
-  font-family: "Mali", cursive;
+  font-family: $font_header;
   font-weight: bold;
   font-size: 30px;
   letter-spacing: 1px;
